# owasp-top10-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
openspec/changes/archive/2026-05-03-owasp-report-doc-links/: design.md  tasks.md
openspec/changes/archive/2026-05-03-owasp-report-save-to-disk/: design.md  proposal.md
openspec/changes/archive/2026-05-03-owasp-top10-mcp/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-05-mcp-trust-and-agent-ux/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-05-owasp-cheat-sheet-links/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-05-owasp-scan-save/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-05-06-astro-tier1-scan/: proposal.md
openspec/changes/archive/2026-05-07-owasp-api-security-2023-crosswalk/: design.md  proposal.md  tasks.md
openspec/changes/astro-tier1-scan/: design.md  tasks.md
openspec/changes/owasp-report-doc-links/: proposal.md
openspec/changes/owasp-report-save-to-disk/: tasks.md
openspec/changes/owasp-top10-mcp/specs/owasp-top10-mcp/: spec.md
openspec/specs/owasp-report-doc-links/: spec.md
openspec/specs/owasp-top10-mcp/: spec.md
owasp_top10_mcp/: __init__.py  __main__.py  constants.py  report_save.py  server.py
owasp_top10_mcp/scan/: __init__.py  caps.py  cheat_sheets.py  engine.py  finding.py  markdown.py  rules_builtin.py  walker.py
tests/: test_scan.py  test_server_descriptions.py
tests/fixtures/astro_repo/: Unsafe.astro
tests/fixtures/sample_repo/: Dockerfile  bad.js  bad.py  package.json
(+7 files in other folders)
