[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owasp-top10-mcp"
version = "1.0.1"
description = "Local MCP server: static OWASP Top 10:2025-oriented repo scanning (v1)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.12.0,<2",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
owasp-top10-mcp = "owasp_top10_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["owasp_top10_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
